db에서 가져와서 마커 업데이트 하는 코드.. 확인 필요

--- a/mini3/subway/templates/base.html
+++ b/mini3/subway/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <!-- <meta http-equiv="Refresh" content="6"> -->
     <meta charset="UTF-8">
     <title>{% block title %}기본 타이틀{% endblock %}</title>
     <link rel="stylesheet" type="text/css">
